# concrexit

./: .codeclimate.yml  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .isort.cfg  .mailmap  .pre-commit-config.yaml  .pylintrc  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.dependencies  LICENSE.md  Makefile  Pipfile  README.md  concrexit-server.nix  default.nix  dev-requirements.txt  docker-compose.yml  flake.nix  flake_old.nix  link_album_events.csv  manage.py  migration-requirements.txt  migration.md  package.json  prod-requirement.txt  production-requirements.txt  pyproject.toml  release.nix  release.sh  renovate.json  requirements.txt  shell.nix  source_me.sh  timed-commands.nix  (+1 more)
.devcontainer/: devcontainer.json
.github/: .dependabot.yaml  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  app-labeler.yaml  dependabot.yml  release-drafter.yaml  renovate.json  type-labeler.yaml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md  other.md  technical-change.md
.github/workflows/: build-dependencies-docker.yaml  build-production-docker.yaml  build.yaml  codeql-analysis.yml  delete-deploy-review.yaml  deploy-production.yaml  deploy-review.yaml  deploy-staging.yaml  deploy.yaml  generate_models_graph.yaml  labeler.yaml  new-pull-request.yaml  nix.yaml  publish-container.yml  release-drafter.yaml  release-terraform-plan.yaml  review.yaml  test.yaml  update-flake.yaml
.gitlab/issue_templates/: Bug.md  Feature Request.md  Technical Change Request.md
.gitlab/merge_request_templates/: Added New Feature.md  Implemented Technical Change.md  Resolved Bug.md
docs/: Makefile  activemembers.api.rst  activemembers.api.v1.rst  activemembers.api.v2.rst  activemembers.rst  announcements.api.rst  announcements.api.v1.rst  announcements.api.v2.rst  announcements.api.v2.serializers.rst  announcements.rst  conf.py  documents.rst  documents.templatetags.rst  education.rst  events.api.calendarjs.rst  events.api.rst  events.api.serializers.base.rst  events.api.serializers.event_registrations.rst  events.api.serializers.events.rst  events.api.serializers.rst  events.api.v1.rst  events.api.v1.serializers.event_registrations.rst  events.api.v1.serializers.events.rst  events.api.v1.serializers.rst  events.api.v1.viewsets.rst  events.api.v2.rst  events.api.v2.serializers.rst  events.api.viewsets.rst  events.models.rst  events.rst  generate-apidocs.sh  index.rst  mailinglists.api.rst  mailinglists.rst  make.bat  members.api.calendarjs.rst  members.api.rst  members.api.v1.rst  members.api.v2.rst  members.api.v2.serializers.rst  (+51 more)
infra/: .env.public  .env.public.docker-staging  .env.public.localhost  .env.public.production  .env.public.staging  .gitignore  README.md  debian-install.sh  docker-compose-local.yml  docker-compose.local.yml  docker-compose.yml  env.public.docker-staging  env.public.local  env.public.production  env.public.staging  env.secret.example  env.secret.local
infra/concrexit/: Dockerfile  cronjobs  docker-entrypoint.sh  gunicorn.conf.py  server-entrypoint.sh  worker-entrypoint.sh
infra/docker/: collect-static.sh  docker-entrypoint.sh
infra/nginx/: Dockerfile  concrexit.conf.template
infra/nginx-local/: Dockerfile  concrexit.conf.template
infra/nixos/: concrexit.nix  configuration.nix  swapfile.nix  timed-command.nix
infra/resources/: apple-app-site-association.json
infra/secrets/: concrexit-production.env.age  concrexit-staging.env.age  secrets.nix
members/: models.py  urls.py  views.py
nix/: concrexit.nix  configuration.nix  default.nix  sources.json  sources.nix  test.nix  timed-command.nix
resources/: ec2-bootstrap.sh  entrypoint.sh  entrypoint_celery.sh  entrypoint_production.sh  review-host-create.sh  review-host-remove.sh
scripts/: build-nix.bash  build-nix.sh  pre-push-hook  run-from-nixpkgs.bash  send-conf-and-switch.bash  send-conf-and-switch.sh  test-vm.bash  test-vm.sh
templates/: README.md
templates/registration/: login.html
thaliawebsite/: settings.py  urls.py
website/: .coveragerc  .pylintrc  CONTRIBUTING.md  db.sqlite3-journal  manage.py
website/activemembers/: README.md  admin.py  apps.py  backends.py  emails.py  forms.py  gsuite.py  models.py  resources.py  services.py  signals.py  sitemaps.py  tasks.py  tests.py  urls.py  views.py
website/announcements/: admin.py  apps.py  context_processors.py  middleware.py  models.py  services.py  tests.py  urls.py  views.py
website/committees/: admin.py  apps.py  models.py  sitemaps.py  tests.py  urls.py  views.py
website/documents/: admin.py  apps.py  forms.py  models.py  services.py  sitemaps.py  urls.py  views.py
website/education/: admin.py  apps.py  emails.py  forms.py  models.py  resources.py  sitemaps.py  urls.py  views.py
website/events/: admin.py  admin_views.py  apps.py  decorators.py  emails.py  exceptions.py  feeds.py  forms.py  models.py  payables.py  resources.py  services.py  signals.py  sitemaps.py  tasks.py  tests.py  urls.py  views.py  widgets.py
website/facedetection/: README.md  admin.py  apps.py  forms.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py
website/facerecognition/: admin.py  apps.py  forms.py  models.py  processing.py  services.py  urls.py  views.py
website/mailinglists/: admin.py  apps.py  gsuite.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py
website/members/: README.md  admin.py  admin_views.py  apps.py  decorators.py  emails.py  forms.py  middleware.py  models.py  resources.py  services.py  sitemaps.py  tasks.py  tests.py  urls.py  views.py
website/merchandise/: admin.py  apps.py  models.py  payables.py  services.py  signals.py  sitemaps.py  tasks.py  tests.py  urls.py  views.py
website/moneybird/: __init__.py  admin.py  administration.py  apps.py  models.py  resource_types.py  resources.py  settings.py  synchronization.py
website/moneybirdsynchronization/: admin.py  administration.py  apps.py  emails.py  models.py  moneybird.py  moneybird_resources.py  services.py  signals.py  tasks.py  tests.py
website/newsletters/: admin.py  apps.py  emails.py  (+8 more)
(+1937 files in other folders)
