[project]
name = "concrexit"
version = "0.0.dev"
description = "New new Thalia website, now with extra Django."
maintainers = [
    {name = "Thalia Technicie", email = "www@thalia.nu"},
]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.13,<3.14"

dependencies = [
    "Django==5.1.1",
    "django-localflavor==4.0",
    "djangorestframework==3.15.2",
    "django-ical==1.9.2",
    "django-sendfile2==0.7.1",
    "django-queryable-properties==1.8.5",
    "django-oauth-toolkit==2.4.0",
    "django-cors-headers==3.14.0",
    "django-debug-toolbar==4.4.6",
    "django-admin-autocomplete-filter==0.7.1",
    "django-bootstrap5~=22.1",
    "django-tinymce==4.1.0",
    "django-storages==1.14.4",
    "django-drf-filepond==0.5.0",
    "django-filepond-widget==0.9.0",
    "django-thumbnails==0.8.0",
    "django-ratelimit==4.1.0",
    "django-sass-processor==1.4.1",
    "django-otp==1.5.1",
    "django-formtools==2.5.1",
    "django-two-factor-auth[webauthn,phonenumbers]~=1.16.0",
    "bleach[css]~=6.1.0",
    "Pillow==11.0.0",
    "bcrypt==4.0.1",
    "argon2_cffi==21.3.0",
    "firebase-admin==6.2.0",
    "google-api-python-client==2.118.0",
    "sentry-sdk~=2.12.0",
    "beautifulsoup4~=4.11.1",
    "boto3==1.34.149",
    "gunicorn==22.0.0",
    "qrcode[pil]~=7.4.2",
    "freezegun==1.5.1",
    "celery[redis]~=5.3.6",
    "PyYAML==6.0.1",
    "inflection~=0.5.1",
    "uritemplate~=4.1.1",
    "puremagic~=1.27",
    "psycopg[binary]~=3.2.3",
]

[dependency-groups]
dev = [
    "django-template-check==0.4.0",
    "factory_boy==3.3.0",
    "pydenticon==0.3.1",
    "Faker==18.13.0",
    "coverage[toml]~=7.5.3",
    "ruff==0.7.1",
    "pre-commit==3.5.0",
    "pyparsing~=3.0.9",
    "pydot~=1.4.2",
    "django-extensions~=3.2.1",
]

scss = [
    # These dependencies are only needed to compile SASS, which can be done
    # offline during a build. So these are not needed in production.
    "libsass==0.23.0",
    "django-compressor==4.5.1",
]

[tool.uv]
default-groups = ["dev", "scss"]

[tool.coverage.run]
branch = true
source = ["website"]
omit = ["website/manage.py", "website/thaliawebsite/wsgi.py", "website/thaliawebsite/settings.py", "website/*/migrations/*", "website/*/test*"]

[tool.coverage.report]
precision = 2
skip_covered = true
show_missing = true
fail_under = 65.0

[tool.ruff.format]
exclude = ['migrations']

[tool.ruff.lint.isort.sections]
django = ["django"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

known-first-party = [
    "website",
    "activemembers",
    "announcements",
    "documents",
    "education",
    "events",
    "facedetection",
    "mailinglists",
    "members",
    "merchandise",
    "moneybirdsynchronization",
    "newsletters",
    "partners",
    "payments",
    "photos",
    "pizzas",
    "promotion",
    "pushnotifications",
    "registrations",
    "sales",
    "shortlinks",
    "singlepages",
    "thabloid",
    "thaliawebsite",
    "utils",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["migrations", ".venv", ".vscode", ".pyenv"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "N",
    "UP",
    "DJ008",
    "DJ003",
    "ISC",
    "PIE",
    "Q",
    "INT",
    "PLE",
    "PLW",
    "RUF",
    "D200",
    "D201",
    "D202",
    "D204",
    "D205",
    "D206",
    "D207",
    "D208",
    "D209",
    "D210",
    "D211",
    "D212",
    "D300",
    "D301",
    "D400",
    "D401",
    "D402",
    "D403",
    "D412",
    "D414",
    "D418",
    "D419",
]

ignore = [
    "E501",  # line too long
    "N818",  # exception class should have Error suffix
    "PLW2901",  # loop variable overwritten
    "RUF005",  # use spread operator instead of concatenation
    "RUF012",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "F841",  # unused local variable
    "D400",  # docstring first line should end with a period
    "D401",  # docstring summary imperative mood
    "D205",  # docstring 1 line between summary and description
    "D212",  # docstring should start at first line
]
